# docs/swagger.json
@@ -345,6 +345,34 @@
                 ],
                 "responses": {}
             }
+        },
+        "/search": {
+            "post": {
+                "description": "Search for STAC items via the Search endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Search"
+                ],
+                "summary": "POST Search request",
+                "operationId": "post-search",
+                "parameters": [
+                    {
+                        "description": "Search body json",
+                        "name": "search",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Search"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
@@ -378,7 +406,9 @@
                 },
                 "links": {
                     "type": "array",
-                    "items": {}
+                    "items": {
+                        "$ref": "#/definitions/models.Link"
+                    }
                 },
                 "providers": {
                     "type": "array",
@@ -440,6 +470,37 @@
                 },
                 "type": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Link": {
+            "type": "object",
+            "properties": {
+                "href": {
+                    "type": "string"
+                },
+                "rel": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Search": {
+            "type": "object",
+            "properties": {
+                "collection": {
+                    "type": "string"
+                },
+                "ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
